--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 *.user
 *.userosscache
 *.sln.docstates
-Server/data/
+Server/data/*
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
