No need to update secrets.py

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 *.userosscache
 *.sln.docstates
 Server/data/*
-Server/signature/secrets.py
+secrets.py
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
