--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ secrets.py
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
+b-env/
+env/
+src/server/data/*.json
+src/server/data/expenses/*.json
 
 # Gradle files
 *.iml
